Don't use our own deprecated code
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>