@@ -14,10 +14,11 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
 import java.util.Locale;
 import java.util.Random;
+import java.util.Set;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.lang.Integer.parseInt;
@@ -160,7 +161,7 @@ class InternetTest {
         }
         final String safeDomain = faker.internet().resolve("internet.safe_email");
 
-        assertThat(emails.stream().filter(t -> t.endsWith("@" + safeDomain)).toList())
+        assertThat(emails.stream().filter(t -> t.endsWith("@" + safeDomain)).collect(Collectors.toList()))
             .isNotEmpty();
     }
 
@@ -175,7 +176,7 @@ class InternetTest {
         }
         final String safeDomain = faker.internet().resolve("internet.safe_email");
 
-        assertThat(emails.stream().filter(t -> t.endsWith("@" + safeDomain)).toList())
+        assertThat(emails.stream().filter(t -> t.endsWith("@" + safeDomain)).collect(Collectors.toList()))
             .isNotEmpty();
     }
 
